Fixed issue with navbar overlapping <main>

--- a/Broadway/style.css
+++ b/Broadway/style.css
@@ -7,6 +7,7 @@ html, body {
     background-color: #333333;
     position: fixed;
     width: 100%;
+    z-index: 1;
   }
   
   nav {
@@ -25,6 +26,8 @@ html, body {
   
   main {
     text-align: center;
+    position: relative;
+    top: 80px;
   }
   
   main h1 {
